kubernetes/regapp/overlays/dev/add_hostaliases.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yournamehere
spec:
  template:
    spec:
      hostAliases:
        - ip: 192.168.39.76
          hostnames:
          - keycloak.nerc.mghpcc.org
