kubernetes/regapp/overlays/dev/devel_switch.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: regapp
spec:
  template:
    spec:
      containers:
        - name: regapp-container
          args:
            "--devel"
