kubernetes/regapp/overlays/dev/patch_etc_hosts.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-important
spec:
  template:
    spec:
      hostAliases:
      - ip: "140.247.152.183"
        hostnames:
        - "keycloak.mss.mghpcc.org"
        - "keycloakdev.mss.mghpcc.org"
