kubernetes/regapp/overlays/dev/wait_for_kc.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
spec:
  template:
    spec:
